# rs-arrow-json2schema

./: Cargo.toml  README.md
src/: asch.rs  basic.rs  lib.rs
